# CppRefactoringTools

./: CMakeLists.txt  README.md  TopCommentBlocTemplateFile.txt  conanfile.py
ClangSandbox/: CMakeLists.txt  main.cpp  source.cpp
apps/: CMakeLists.txt
apps/CreateClass/src/: CMakeLists.txt  CreateClass.cpp  CreateClass.h  CreateClassDialog.cpp  CreateClassDialog.h  CreateClassDialog.ui  CreateClassEditor.cpp  CreateClassEditor.h  EditorViewModel.cpp  EditorViewModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
apps/CreateClass/tests/: CMakeLists.txt
apps/CreateClass/tests/src/: CreateClassEditorErrorTest.cpp  CreateClassEditorTest.cpp  EditorViewModelTest.cpp
libs/: CMakeLists.txt
libs/Catch2/: Catch2Main.cpp  Catch2QString.cpp  Catch2QString.h
libs/CppRefactoring/src/: CMakeLists.txt
libs/CppRefactoring/src/Mdt/CppRefactoring/: Algorithm.cpp  Algorithm.h  Class.cpp  Class.h  ClassBuilder.cpp  ClassBuilder.h  ClassDeclaration.cpp  ClassDeclaration.h  ClassEditorData.cpp  ClassEditorData.h  ClassFileSystemStructure.cpp  ClassFileSystemStructure.h  ClassName.cpp  ClassName.h  ClassValidation.cpp  ClassValidation.h  ClassValidationError.cpp  ClassValidationError.h  CreateClass.cpp  CreateClass.h  DirectoryRelativePath.cpp  DirectoryRelativePath.h  FileOverwriteBehavior.cpp  FileOverwriteBehavior.h  FileSystemBuilder.cpp  FileSystemBuilder.h  FileSystemEditorData.cpp  FileSystemEditorData.h  FileSystemHelpers.cpp  FileSystemHelpers.h  FileSystemStructure.cpp  FileSystemStructure.h  FileSystemValidation.cpp  FileSystemValidation.h  FileSystemValidationError.cpp  FileSystemValidationError.h  FileWriteError.cpp  FileWriteError.h  FileWriter.cpp  FileWriter.h  (+44 more)
libs/CppRefactoring/tests/: CMakeLists.txt
libs/CppRefactoring/tests/src/: AlgorithmTest.cpp  ClassBuilderErrorTest.cpp  ClassBuilderTest.cpp  ClassDeclarationTest.cpp  ClassEditorDataTest.cpp  ClassFileSystemStructureTest.cpp  ClassNameTest.cpp  ClassTest.cpp  ClassValidationTest.cpp  CreateClassErrorTest.cpp  CreateClassTest.cpp  CreateClassTestCommon.h  DirectoryRelativePathTest.cpp  FileSystemBuilderErrorTest.cpp  FileSystemBuilderTest.cpp  FileSystemEditorDataTest.cpp  FileSystemHelpersTest.cpp  FileSystemStructureTest.cpp  FileSystemValidationTest.cpp  FileWriterErrorTest.cpp  FileWriterTest.cpp  FileWriterTestCommon.h  HeaderFileContentTest.cpp  HeaderFileNameTest.cpp  IncludeGuardTest.cpp  IncludeStatementBlocTest.cpp  IncludeStatementTest.cpp  LibraryExportTest.cpp  NamespaceTest.cpp  SourceFileContentTest.cpp  SourceFileNameTest.cpp  SourceFilesRootDirectoryTest.cpp  TestBuilderTest.cpp  TestFrameworkEditorDataTest.cpp  TestNameTest.cpp  TestSourceFileContentTest.cpp  TestSourceFileNameTest.cpp  TestSourceFilesDirectoryTest.cpp  TestTest.cpp  TopCommentBlocFileReaderErrorTest.cpp  (+3 more)
